--- a/root/_config.yml
+++ b/root/_config.yml
@@ -28,6 +28,7 @@ baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "https://marykka.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  marykka
+# markdown: GFM
 
 # Build settings
 theme: minima
