--- a/root/_config.yml
+++ b/root/_config.yml
@@ -31,9 +31,11 @@ github_username:  marykka
 # markdown: GFM
 
 # Build settings
-theme: Leap day
+remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+- jekyll-feed
+# theme: minima  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
