--- a/root/_config.yml
+++ b/root/_config.yml
@@ -31,11 +31,10 @@ github_username:  marykka
 # markdown: GFM
 
 # Build settings
-remote_theme: pages-themes/leap-day@v0.2.0
+theme: minima
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
 - jekyll-feed
-# theme: minima  
+  
 
 # Exclude from processing.
 # The following items will not be processed, by default.
