--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -21,16 +21,19 @@
 title: UX writer portfolio
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  Mariia Tikhomirova, Berlin-based UX writer
+  © Mariia Tikhomirova, Berlin-based UX writer
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://marykka.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 # github_username:  jekyll
+linkedin_username: mariiatikhomirova
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+
+show_excerpts: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
