--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: UX writer portfolio
 email: ""
 description: >- # this means to ignore newlines until "baseurl:"
-  © Mariia Tikhomirova. Berlin, 2021
+  © Mariia Tikhomirova<br />Berlin, 2021
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://marykka.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
