--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: UX writer portfolio
-email: ""
+email: "uxwrtr@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
-  © Mariia Tikhomirova
-  
-  Berlin, 2021
+  © Mariia Tikhomirova Berlin, 2021
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://marykka.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  marykka
+# github_username:  marykka
 linkedin_username: mariiatikhomirova
 
 # Build settings
