--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: UX writer portfolio
-email: "uxwrtr@gmail.com"
+email: uxwrtr@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   © Mariia Tikhomirova Berlin, 2021
 baseurl: "" # the subpath of your site, e.g. /blog
