--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: UX writer portfolio
+title: Mariia Tikhomirova >-
+UX writer, Berlin
 email: uxwrtr@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   © Mariia Tikhomirova Berlin, 2021
