--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mariia Tikhomirova >-
-UX writer, Berlin
+title: Mariia Tikhomirova, UX writer
 email: uxwrtr@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   © Mariia Tikhomirova Berlin, 2021
