--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ url: "https://marykka.github.io" # the base hostname & protocol for your site, e
 linkedin_username: mariiatikhomirova
 
 # Build settings
-theme: minima
+#theme: minima
+theme: just-the-docs
 plugins:
   - jekyll-feed
 
