--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = 'https://marykka.github.io/'
 languageCode = 'en-us'
 title = 'Mariia Tikhomirova, UX writer'
 theme = 'ananke'
+publishdir = 'docs'
